# WeatherApp

./: APIConverter.cpp  APIConverter.h  ApiConverter.cpp  ApiConverter.h  CMakeLists.txt  CurrentWeatherReport.cpp  CurrentWeatherReport.h  Forecast.cpp  Forecast.h  ForecastReport.cpp  ForecastReport.h  Humidity.cpp  Humidity.h  IDisplayable.h  Preferences.cpp  Preferences.h  Properties.cpp  Properties.h  Property.cpp  Property.h  README.md  Temperature.cpp  Temperature.h  UI.cpp  UI.h  UVIndex.cpp  UVIndex.h  Ui.cpp  Ui.h  Weather.cpp  Weather.h  WeatherReport.h  main.cpp
